--- a/index.html
+++ b/index.html
@@ -26,14 +26,13 @@
         </div>
     </div>
     <div class="hero"></div>
-    class="content">
+    <div=class="content">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="company logo symbol" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-       
 
        <div="online-reputation-management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" alt="search engine sign" class="float-right" />
@@ -49,9 +48,10 @@
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
+        </section>
         </div>
    
-
+<section>
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -59,6 +59,7 @@
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
+            </div>
         </div>
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
@@ -73,14 +74,12 @@
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
-    </div>
-    <div class="footer">
+      
+    <div=classooter">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
-        </p>
-    </div>
+   
 </body>
 
 </html>
