--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>website</title>
 </head>
-
 <body>  
 
     <div class="header">
@@ -25,8 +24,9 @@
             </ul>
         </div>
     </div>
+
     <div class="hero"></div>
-    <div=class="content">
+    <div class="content">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="company logo symbol" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -34,7 +34,7 @@
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
 
-       <div="online-reputation-management" class="online-reputation-management">
+       <div class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" alt="search engine sign" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -55,14 +55,13 @@
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="symbol of benefit"/>
+            <img src="./assets/images/lead-generation.png" alt="benefits sign" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-            </div>
         </div>
         <div class="benefit-brand">
-            <h3>Brand Awareness</h3>
+            <h3>Brand Awareness</h3> 
             <img src="./assets/images/brand-awareness.png" alt="brand symbol" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
@@ -79,6 +78,8 @@
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
+        </p>
+    </footer>
    
 </body>
 
