--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="hero"></div>
-    <div class="content">
+    <div class="content"><div>
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="company logo symbol" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -34,7 +34,7 @@
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
 
-       <div class="online-reputation-management">
+       <div class="online-reputation-management"></div>
             <img src="./assets/images/online-reputation-management.jpg" alt="search engine sign" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -42,14 +42,14 @@
             </p>
   
 
-       <div id="social-media-marketing" class="social-media-marketing">
+       <div class="social-media-marketing"> </div>
             <img src="./assets/images/social-media-marketing.jpg" alt="social media picture" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </section>
-        </div>
+    
    
 <section>
     <div class="benefits">
